# acf

./: .gitignore
ACF/: License.txt  RegisterPath.js
ACF/Docs/: Richtlinien.doc
ACF/Include/: ACF.h
Config/: AcfConfig.awc  AcfFull.xpc  AcfTestConfig.awc  BaseOnly.awc  BaseOnly.xpc  Core.xpc  Full.xpc  PartituraOnly.awc
Config/CMake/: AcfEnv.cmake  AcfQt.cmake  AcfStd.cmake  AcfStdGui.cmake  ApplicationConfig.cmake  ComponentConfig.cmake  CustomBuild.cmake  CustomBuildFunction.cmake  GeneralConfig.cmake  Macro.cmake  MsvcEnableDebugInfo.cmake  PluginConfig.cmake  ProjectRoot.cmake  SharedLibraryConfig.cmake  StaticConfig.cmake  WindeployQt.cmake
Config/Ecl/: CodingStandardRules.xml  ConvertToEcl.js  TestTransform.bat  VC2Ecl.xslt  VC2EclC.xslt  input.xml
Config/Eclipse/: ConvertAll.js  ConvertToEcl.js  TestTransform.bat  VC2Ecl.xslt  VC2EclC.xslt
Config/QMake/: AcfLibs.pri  AcfQt.pri  AcfStd.pri  AcfVersion.pri.xtrsvn  Application.config  ApplicationConfig.pri  Component.config  ComponentConfig.pri  ConvertToQMake.js  CopyProToSubdir.js  CopyQMakeToSubdir.js  CopyVCProjToSubdir.js  CustomBuild.pri  FromVC.xslt  General.config  GeneralConfig.pri  Include.config  IncludeQt.config  IncludeQtGui.config  MsvcEnableDebugInfo.pri  QtBase.config  QtBaseConfig.pri  QtCreatorCodeStyle.xml  QtGuiBase.config  QtGuiBaseConfig.pri  RemoveProFromSubdir.js  SharedLibraryConfig.pri  Solution.pri  Static.config  StaticConfig.pri  TestConfig.pri  TestRunnerConfig.pri  TestTransform.bat
Config/Qbs/: AcfPackage.qbs  AcfRules.qbs  ApplicationProduct.qbs  ComponentProduct.qbs  CustomBuild.qbs  GeneralProduct.qbs  QtGuiBaseConfig.qbs  QtRules.qbs  StaticProduct.qbs
Config/QtCreator/: CodeStyle.xml
Config/Subversion/: Acf.svnprops  config.txt
Config/Test/: run_tests.bat
Config/Tortoise/: UpdateVersion.cmd  config.txt
Config/VAssistX/: VAssistX_10_05_config.reg
Config/VC10/: Acf.props  Acf.targets  Acf.xml  Component.props  ConvertFromVC9.js  Debug.props  General.props  QtUIForm.props  QtUIForm.targets  QtUIForm.xml  Release.props  Static.props  Tortoise.props  Tortoise.targets  Tortoise.xml
Config/VC12/: Acf.props  Acf.rules  Acf.targets  Acf.xml  Application.props  Component.props  Debug.props  General.props  QtUIForm.props  QtUIForm.rules  QtUIForm.targets  QtUIForm.xml  Release.props  Static.props  Win32.props  Win64.props
Config/VC8/: Acf.rules  Component.vsprops  Debug.vsprops  General.vsprops  QtUIForm.rules  Release.vsprops  Static.vsprops  VCHelper.xslt
Config/VC9/: Acf.rules  Application.vsprops  Component.vsprops  ConvertFromVC8.js  Debug.vsprops  General.vsprops  QtUIForm.rules  Release.vsprops  Static.vsprops  Win32.vsprops  Win64.vsprops
Config/Xcd/: ConvertToXcd.js  VC2Xcd.xslt
Docs/: GraphPlotShape.md
Docs/CodingConvention/: AcfCodingGuide_de.doc  CExample.cpp  CExample.h
Impl/Tests/ComposedGuiTest/CMake/: CMakeLists.txt
Include/: ACF.h
Include/i2d/Test/CMake/: CMakeLists.txt
Include/icmm/Test/CMake/: CMakeLists.txt
Include/ifilegui/CMake/: CMakeLists.txt
Install/: ACF.iss  Compile_Setup.bat  CreateDistribution.bat  CreateInstallation.alx  CreateInstallation.arx  CreateLGPL.alx  CreateLGPL.arx  CreateLGPL.bat  CreateScripts.alx  CreateScripts.arx  CreateScripts.bat  Create_Doxyfile.alx  Create_Doxyfile.arx  Create_FromQMake_VC9_OpenSource.alx  Create_FromQMake_VC9_OpenSource.arx  Create_TechnicalDoc.bat  Create_VC8_LGPL.arx  Create_VC9_LGPL.alx  Create_VC9_LGPL.arx  Create_VC9_OpenSource.alx  Create_VC9_OpenSource.arx  Create_VC_LGPL.alx  Create_VC_LGPL.arx  Create_VC_LGPL.bat  DistAllConfig.xml  DistConfig.xml  Doxyfile  Header_Commercial.txt  Header_LGPL.txt  InfoAfter.txt  Install.iss  InstallationInfo.txt  Kopie von _Create_VC8_Installation.bat  LicenseCommercial.txt  MakeVCProjects.bat  ReadMe.txt  Rebuild_VC8.bat  _Create_FromQMake_VC9_OpenSource.bat  _Create_VC12_Installation.bat  _Create_VC12_OpenSource.bat  (+8 more)
IntegrationTest/: CPartituraBasedTest.cpp  CPartituraBasedTest.h  CSelectionParamTest.cpp  CSelectionParamTest.h
Partitura/: AcfInfoCopyApp.arx  Compositor.alx  Compositor.arx  NewCompositor.alx  NewCompositor.arx
Tests/: README.md
Tests/UtilityClassesTest/CMake/: CMakeLists.txt
(+4150 files in other folders)
